--- a/xxl-job-executor-sample/src/main/resources/bootstrap.yml
+++ b/xxl-job-executor-sample/src/main/resources/bootstrap.yml
@@ -4,6 +4,6 @@ spring:
       # 配置中心的具体地址
       uri: http://49.232.0.86:6000/
       # 对应{application}部分
-      name: xxl-job-admin
+      name: xxl-job-executor
       # 对应{profile}部分
       profile: test
